<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ContactFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactFormL1"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:id="@+id/tvMailSenderName"
            android:layout_height="wrap_content"
            android:hint="@string/contactFormHint1"
            android:inputType="textPersonName"
            android:layout_width="match_parent"></EditText>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactFormL2"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:id="@+id/tvMailSenderEmail"
            android:layout_height="wrap_content"
            android:hint="@string/contactFormHint2"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactFormL3"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:id="@+id/tvMailBody"
            android:layout_height="wrap_content"
            android:hint="@string/contactFormHint3"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="match_parent"></EditText>


        <Button
            android:id="@+id/ButtonSend"
            android:layout_height="wrap_content"
            android:text="@string/contactFormButtonText"
            android:onClick="sendFeedback"
            android:layout_width="match_parent"></Button>

    </LinearLayout>

</FrameLayout>
